--- a/1 Python Basics/1.3 Expressions and Variables.md
+++ b/1 Python Basics/1.3 Expressions and Variables.md
@@ -1,15 +1,26 @@
 *[Back to index](</readme.md>)*
 ___
 ## Contents
+
 - [Contents](#contents)
 - [Variables](#variables)
   - [Variables from user input](#variables-from-user-input)
 - [Expressions](#expressions)
   - [Modulo](#modulo)
+- [Advanced Removal Methods](#advanced-removal-methods)
+  - [Key:](#key)
+  - [del Statement](#del-statement)
+  - [remove() Method](#remove-method)
+  - [pop() Method](#pop-method)
+  - [clear() Method](#clear-method)
+  - [discard() Method](#discard-method)
+  - [difference\_update() Method](#difference_update-method)
 - [String Exercises](#string-exercises)
 - [Expressions and Variables Exercises:](#expressions-and-variables-exercises)
-___
 
+
+
+___
 ## Variables
 *Variables are used to store values.*  
 
@@ -158,6 +169,87 @@ if number % 2 != 0: # Will return True if the number is odd
 [Code](<../XXCode Snips/1.3.3 Even or Odd.py>)  
 *See [Loops *Needs update 3.2](/x3%20Python%20Programming%20Fundamentals/x3.2%20Loops.md) for loop information.*  
 
+___
+## Advanced Removal Methods
+Python offers several ways to remove elements or references to data, depending on the context. These include:
+
+| **Method**           | **Use Case**                                 | **Target**    | **Key Difference**                                                       |
+|----------------------|----------------------------------------------|---------------|--------------------------------------------------------------------------|
+| `del`                | Delete references or by key/index            | [L](), [T](), [D]() | Does not return the deleted value. Can delete entire variables, tuples, or dictionary entries.                |
+| `remove()`           | Remove specific value                        | [L](), [S]()       | Operates on values, not indices. Throws an error if the value is absent. |
+| `pop()`              | Remove and return value                      | L, S, D    | For lists/sets, removes and returns the value. For dictionaries, removes and returns the value for a given key. |
+| `clear()`            | Empty the container                          | L, S, D    | Keeps the container, empties its contents. Tuples cannot be emptied, as they are immutable.                         |
+| `discard()`          | Remove value (no error)                      | S          | Non-error-throwing when the value is absent.                             |
+| `difference_update()`| Remove elements found in another iterable    | S          | Modifies the set in place without returning a value.                     |
+| `tuple slicing`      | Create a new tuple without specific elements | T          | Tuples are immutable; slicing creates a new tuple.                       |
+
+### Key:
+- **L**: Lists
+- **T**: Tuples
+- **S**: Sets
+- **D**: Dictionaries
+
+### del Statement
+The `del` statement can be used with [lists](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#delete), [dictionaries](/2%20Python%20Data%20Structures/2.3%20Dictionaries.md#delete) and entire variables. While it cannot delete elements from a [tuple](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#tuples) because tuples are immutabe, it can be used to remove an entire tuple. Delete (unlinke remove) does not return the deleted value.   
+The `del` statement deletes a reference to an object, or the reference to the element specified by key/index. if no references remain the object/element is garbage collected.  
+
+___
+### remove() Method
+The `remove()` method is used specifically on [lists](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#remove), it removes the first occurrence of a specific value from a list. Being a method, `remove()` operates on values in place.  
+The `remove()` method will also work on [sets](/2%20Python%20Data%20Structures/2.2%20Sets.md#remove), however it's limitation of only removing a single value at a time, and the fact that it will throw a `KeyError` if a value isn't present in the set makes it less preferred.
+
+___
+### pop() Method
+The `pop()` method is similar to `del()` in that it will remove an element referred to by index/key from a [list](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#pop) or [dictionary](/2%20Python%20Data%20Structures/2.3%20Dictionaries.md#pop), however it will also return the removed element.
+What It Does: Removes and returns an element.  
+Example:
+```py 
+# Lists
+my_list = [1, 2, 3]
+value = my_list.pop(1)  # Removes element at index 1. Result: [1, 3], value = 2
+
+# Dictionaries
+my_dict = {"a": 1, "b": 2}
+value = my_dict.pop("b")  # Removes key 'b'. Result: {"a": 1}, value = 2
+```
+
+What It Does: Removes and returns an arbitrary element from a set.
+Where It's Used: Only for sets.
+Difference from del: Removes an arbitrary element rather than a specified value.
+Example:
+```py
+my_set = {1, 2, 3}
+value = my_set.pop()  # Removes and returns any element (e.g., `1`). Result: {2, 3}
+```
+
+### clear() Method
+What It Does: Removes all elements, leaving the container empty.
+Where It's Used: Lists, dictionaries, sets, etc.
+Difference from del: clear() empties the container but keeps the variable intact.
+Example:
+```py 
+# Lists
+my_list = [1, 2, 3]
+my_list.clear()  # Result: []
+
+# Dictionaries
+my_dict = {"a": 1, "b": 2}
+my_dict.clear()  # Result: {}
+```
+
+### discard() Method
+
+What It Does: Removes a value from a set. If the value doesn't exist, it does nothing (no error).
+Where It's Used: Only for sets.
+Difference from del: discard() is specific to sets and is non-error-throwing.
+Example:
+```py 
+my_set = {1, 2, 3}
+my_set.discard(2)  # Result: {1, 3}
+my_set.discard(4)  # No error, set remains unchanged.
+```
+
+### difference_update() Method
 ___
 ## String Exercises
 
