--- a/2 Python Data Structures/2.1 Lists and Tuples.md
+++ b/2 Python Data Structures/2.1 Lists and Tuples.md
@@ -21,7 +21,11 @@ ___
   - [List Sorting](#list-sorting)
   - [Append](#append)
   - [Extend](#extend)
-  - [Delete](#delete)
+  - [Removal Methods](#removal-methods)
+    - [Delete](#delete)
+    - [Remove](#remove)
+    - [Pop](#pop)
+    - [Clear](#clear)
   - [Aliasing and Cloning](#aliasing-and-cloning)
     - [Aliasing](#aliasing)
     - [Cloning](#cloning)
@@ -37,7 +41,7 @@ The main difference between the two is that lists can be modified, whereas tuple
 
 ___
 ## Tuples
-Tuples are an ordered sequence, they are very much like strings, except that unlike strings each element can contain multiple characters (different elements may be different types), rather than each character being an element.  
+Tuples are an ordered sequence, they are very much like strings, except that unlike strings each element can contain multiple characters (different elements may be different types), rather than each character being an element, and they are immutable; they cannot be modified.
 
 Tuples are expressed as comma-separated elements within parentheses. These elements can be of different types (string, float, integer etc.), but the type of the variable is tuple.  
 Example tuple with string, integer and float.
@@ -615,7 +619,9 @@ Will output:
 [1, 2, 3, 4, 5, 6, 'a', 'b', 'c']
 ```
 
-### Delete
+### Removal Methods
+
+#### Delete
 List elements can be deleted using `del()`. This is an example of a [statement](#functions-and-methods). `del` will remove any elements in the list indicated by its index reference.
 ```py
 list = [1, 2, 3, 4, 5, 6]
@@ -623,11 +629,38 @@ print('Before change:', list)
 del(list[3]) # Delete the 4th elemnt of th list (index 3)
 print('After change:', list)
 ```
+
 Will output:  
 ```
 Before change: [1, 2, 3, 4, 5, 6]
 After change: [1, 2, 3, 5, 6]
 ```
+
+While the `del` statement is the most simple and direct method for removing elements, it is limited, as it can only remove a single element at a time.
+
+___
+#### Remove
+The `remove()` method is used specifically on lists, it removes the first occurrence of a specific value from a list, it does not work with index references.  
+Being a method, `remove()` operates on the values in place.  
+It should be noted that `remove()` will only remove a single value at a time and will throw a `ValueError` if a value isn't present. This can be useful for deugging.
+```py
+list = [1, 2, 3, 4, 5, 2, 6]
+print('Before change:', list)
+list.remove(2) # Remove the first instance of the number 2
+print('After change:', list)
+list.remove(7) # Remove the number 7 (which is not in the list)
+```
+
+Will output:  
+```
+Before change: [1, 2, 3, 4, 5, 2, 6]
+After change: [1, 3, 4, 5, 2, 6]
+ValueError: list.remove(x): x not in list
+```
+
+#### Pop
+
+#### Clear
 
 ### Aliasing and Cloning
 #### Aliasing
