--- a/2 Python Data Structures/2.3 Dictionaries.md
+++ b/2 Python Data Structures/2.3 Dictionaries.md
@@ -6,26 +6,28 @@ ___
 - [Dictionary Operations](#dictionary-operations)
   - [Retrieve Values](#retrieve-values)
   - [Retrieve Keys](#retrieve-keys)
+  - [In](#in)
   - [Add Keys and Values](#add-keys-and-values)
     - [Direct Assignment](#direct-assignment)
-  - [Update](#update)
-  - [Delete Keys and Values](#delete-keys-and-values)
-  - [In](#in)
+    - [Append](#append)
+    - [Extend](#extend)
+    - [Update](#update)
+    - [Delete](#delete)
 - [Dictionary Exercises](#dictionary-exercises)
 
 ___
 ## Dictionaries
 
-Like lists, dictionaries are a type of collection which can contain different [types](/1%20Python%20Basics/1.2%20Types.md#types). Instead of having integer indexes as [lists](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md) do, dictionaries have keys and values. Keys are analagous to list indexes, but do not need to be integers.  
+Like lists, dictionaries are a type of collection which can contain different [types](/1%20Python%20Basics/1.2%20Types.md#types). Instead of having integer indexes as [lists](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md) do, dictionaries have keys and values. Keys are analogous to list indexes, but do not need to be integers.  
 *As of Python version `3.7`, dictionaries are ordered. In Python `3.6` and earlier, dictionaries are unordered.*
 
-Dictionaries are defined using curley brackets `{}`, Each key and value pair is separated by a comma.  
+Dictionaries are defined using curly brackets `{}`, each key and value pair is separated by a comma.  
 The keys are the first elements; they must be immutable and unique. Each key is followed by a value separated by a colon.  
 The values can be anything, including simple types like `int`, `float`, `str`, or `bool`; or complex types like `list`, `set`, `tuple`, or even `dict`.
 
 **Example Dictionary:**  
 ```py
-dict = {
+student_info = {
     "name": "Alice",
     "age": 30,
     "hobbies": ["reading", "cycling", "gardening"],
@@ -34,7 +36,7 @@ dict = {
 }
 
 ```
-The table below displays the relationship between keys and values, note that nesting is permitted in dictionaries:  
+The table below displays the relationship between keys and values. Note that nesting is permitted in dictionaries:  
 
 |     Keys     |                  Values                    |       Type        |
 |--------------|--------------------------------------------|-------------------|
@@ -53,15 +55,15 @@ A number of operations can be performed on dictionaries in order to manage and m
 ### Retrieve Values
 Values can be retrieved by specifying key names; 
 ```py
-dict = {
+student_info = {
     "name": "Alice",
     "age": 30,
     "hobbies": ["reading", "cycling", "gardening"],
     "is_student": False,
     "scores": {"math": 90, "science": 85, "english": 88},
 }
-dict['name']
-dict['hobbies']
+student_info['name']
+student_info['hobbies']
 ```
 
 Will output:
@@ -72,39 +74,110 @@ Will output:
 
 Alternatively all values in a dictionary can be retrieved using the `values()` method:
 ```py
-dict = {
+student_info = {
     "name": "Alice",
     "age": 30,
     "hobbies": ["reading", "cycling", "gardening"],
     "is_student": False,
     "scores": {"math": 90, "science": 85, "english": 88},
 }
-dict.values()
+student_info.values()
 ```
 
 Will output:
 ```
-dict_values(['Alice', 30, ['reading', 'cycling', 'gardening'], False, {'math': 90, 'science': 85, 'english': 88}])
+student_info_values(['Alice', 30, ['reading', 'cycling', 'gardening'], False, {'math': 90, 'science': 85, 'english': 88}])
 ```
 
 ___
 ### Retrieve Keys
-The keys of a dictionary can be retrieved using the `keys()` method thi will retrieve allthe keys of the dictionary.
+The keys of a dictionary can be retrieved using the `keys()` method this will retrieve all the keys of the dictionary.
 ```py
-dict = {
+student_info = {
     "name": "Alice",
     "age": 30,
     "hobbies": ["reading", "cycling", "gardening"],
     "is_student": False,
     "scores": {"math": 90, "science": 85, "english": 88},
 }
-dict.keys()
+
+student_info.keys()
 ```
 
 Will output:
 ```
-dict_keys(['name', 'age', 'hobbies', 'is_student', 'scores'])
+student_info_keys(['name', 'age', 'hobbies', 'is_student', 'scores'])
 ```
+
+___
+### In
+The `in` operator will check to see if a given key is in a dictionary;
+```py
+student_info = {
+    "name": "Alice",
+    "age": 30,
+    "hobbies": ["reading", "cycling", "gardening"],
+    "is_student": False,
+    "scores": {"math": 90, "science": 85, "english": 88},
+}
+
+"name" in student_info
+```
+
+Will output:
+```
+True
+```
+
+To determine whether a particular value is present in the dictionary the `values()` method can ne included as well.
+```py
+student_info = {
+    "name": "Alice",
+    "age": 30,
+    "hobbies": ["reading", "cycling", "gardening"],
+    "is_student": False,
+    "scores": {"math": 90, "science": 85, "english": 88},
+}
+
+"Alice" in student_info.values()
+``` 
+
+Will output:
+```
+True
+```
+
+This will only work for flat sets of values, for nested dictionaries or lists (like `"hobbies"` or `"scores"` above it will be necessary to [loop](/x3%20Python%20Programming%20Fundamentals/x3.2%20Loops.md) through the dictionary to check for deeper matches.  
+
+Below is an example for checking for nested dictionaries and lists:  
+```py
+def value_in_dict(value, d):
+    for v in d.values():
+        if isinstance(v, dict):  # Check nested dictionaries
+            if value_in_dict(value, v):
+                return True
+        elif isinstance(v, list):  # Check lists
+            if value in v:
+                return True
+        elif v == value:  # Direct match
+            return True
+    return False
+
+# Test
+print(value_in_dict("Alice", student_info))
+print(value_in_dict(85, student_info))
+print(value_in_dict("cycling", student_info))
+print(value_in_dict("graduated", student_info))
+```
+
+Will output:
+```
+True
+True
+True
+False
+```
+
 ___
 ### Add Keys and Values
 There are a number of ways to add values to a key in dictionaries; these will depend on the type of values the key contains:
@@ -113,10 +186,12 @@ There are a number of ways to add values to a key in dictionaries; these will de
 * Dictionaries: Use .update() to add or modify key-value pairs.
 * Tuples: Since they’re immutable, you need to create a new tuple and reassign it.
 
+___
 #### Direct Assignment
-
+Direct assignment will replace existing values, or add new key/value pairs. This is the most straightforward method.  
+Direct assignment can also be used to update dictionary values or replace items in lists within the dictionary using slicing.
 ```py
-dict = {
+student_info = {
     "name": "Alice",
     "age": 30,
     "hobbies": ["reading", "cycling", "gardening"],
@@ -124,29 +199,37 @@ dict = {
     "scores": {"math": 90, "science": 85, "english": 88},
 }
 
-dict["name"] = "Bob" # Replace "Alice" with "Bob"
-dict["name"]
-dict["study_years"] = (2023, 2024) # Add new key and (tuple) values
-dict["study_years"] 
+student_info["name"] = "Bob" # Replace "Alice" with "Bob"
+student_info["study_years"] = (2023, 2024) # Add new key and (tuple) values
+student_info["scores"]["math"] = 95 # Update the math score to 95
+student_info["hobbies"][1:2] = ["basketball"] # Replace cycling (index 1)
+student_info["name"]
+student_info["study_years"]
+student_info["scores"]
+student_info["hobbies"]
 ```
 
 Will output:
 ```
 'Bob'
 (2023, 2024)
+{'math': 95, 'science': 85, 'english': 88}
+['reading', 'basketball', 'gardening']
 ```
 
-Values can be appended to a key using the `append()` method;
+___
+#### Append
+The `append()` method can be used to attach additional values to a list within a dictionary, much in the same way as append is used  with [lists](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#append). Append will only attach a single value at a time.
 ```py
-dict = {
+student_info = {
     "name": "Alice",
     "age": 30,
     "hobbies": ["reading", "cycling", "gardening"],
     "is_student": False,
     "scores": {"math": 90, "science": 85, "english": 88},
 }
-dict["hobbies"].append("knitting")
-dict["hobbies"]
+student_info["hobbies"].append("knitting")
+student_info["hobbies"]
 ```
 
 Will output:
@@ -154,10 +237,10 @@ Will output:
 ['reading', 'cycling', 'gardening', 'knitting']
 ```
 
-It should be noted that the `append()` method will only work with list entries. To append a value to `"name"`, it first needs to be converted to a list:
+It should be noted that the `append()` method will only work with list entries. If it were necessary to append a second value to `"name"`, (the value is a string, not a list) the value first needs to be converted to a list:
 ```py
 # Example dictionary
-dict = {
+student_info = {
     "name": "Alice",
     "age": 30,
     "hobbies": ["reading", "cycling", "gardening"],
@@ -165,9 +248,9 @@ dict = {
     "scores": {"math": 90, "science": 85, "english": 88},
 }
 
-dict["name"] = [dict["name"]] # Convert existing value to a list
-dict["name"].append("Bob") # Append the new name
-print(dict["name"])
+student_info["name"] = [student_info["name"]] # Convert existing value to a list
+student_info["name"].append("Bob") # Append the new name
+print(student_info["name"])
 ```
 
 Will output:
@@ -175,23 +258,72 @@ Will output:
 ['Alice', 'Bob']
 ```
 
-### Update
-
-### Delete Keys and Values
-We can delete an entry:   
+___
+#### Extend
+The `extend()` method behaves much like [`append()`](#append); it can only be used to modify [list](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#extend) values in dictionaries, and only adds a single variable, however that variable can be an iterable, such as another list, whcih means multiple items can in effect be added to the end of an existing list. 
 ```py
+student_info = {
+    "name": "Alice",
+    "age": 30,
+    "hobbies": ["reading", "cycling", "gardening"],
+    "is_student": False,
+    "scores": {"math": 90, "science": 85, "english": 88},
+}
+
+student_info["hobbies"]
+student_info["hobbies"].extend(["knitting", "gaming"])
+print(student_info["hobbies"])
+```
+
+Will output:
+```
+['reading', 'cycling', 'gardening']
+['reading', 'cycling', 'gardening', 'knitting', 'gaming']
+```
+
+___
+#### Update
+The `update()` method is used exclusively  for modifying dictionary entries or adding new key-value pairs."
+```py
+student_info = {
+    "name": "Alice",
+    "age": 30,
+    "hobbies": ["reading", "cycling", "gardening"],
+    "is_student": False,
+    "scores": {"math": 90, "science": 85, "english": 88},
+}
+
+student_info["scores"].update({"history": 75, "art": 80}) # Will append 2 new entries to "scores"
+student_info["scores"]
+```
+
+Will output:
+```
+{'math': 90, 'science': 85, 'english': 88, 'history': 75, 'art': 80}
+```
+
+#### Delete
+Dictionary entries, both single value entries and whole key/value pairs can be removed using the `del` statement. `del()` removes the reference to the object, it will not remove any other references to the same object.
+```py
+student_info = {
+    "name": "Alice",
+    "age": 30,
+    "hobbies": ["reading", "cycling", "gardening"],
+    "is_student": False,
+    "scores": {"math": 90, "science": 85, "english": 88},
+}
+
 # Delete entries by key
-del(release_year_dict['Thriller'])
-del(release_year_dict['Graduation'])
-release_year_dict
+del(student_info["is_student"]) # Delete entry by key
+del(student_info["hobbies"][1]) # Delete value by key and index reference (for list entry)
+student_info
 ```
 
-### In
- We can verify if an element is in the dictionary: 
-```py
-# Verify the key is in the dictionary
-'The Bodyguard' in release_year_dict
+Will output:
 ```
+{'name': 'Alice', 'age': 30, 'hobbies': ['reading', 'gardening'], 'scores': {'math': 90, 'science': 85, 'english': 88}}
+```
+
 
 ___
 ## Dictionary Exercises
