--- a/2 Python Data Structures/2.2 Sets.md
+++ b/2 Python Data Structures/2.2 Sets.md
@@ -5,7 +5,10 @@ ___
 - [Sets](#sets)
 - [Set Operations](#set-operations)
   - [Add and Update](#add-and-update)
-  - [Remove](#remove)
+  - [Element Removal](#element-removal)
+    - [Remove](#remove)
+    - [Discard](#discard)
+    - [Difference update](#difference-update)
   - [In](#in)
 - [Set Logic Operations](#set-logic-operations)
   - [Intersection](#intersection)
@@ -95,13 +98,33 @@ Will output:
   ```
 
 ___
-### Remove
-The `remove()` method is used to remove an element from a set, it is one of a few ways to do this.
+### Element Removal
+There are a number of ways to remove elements from sets see [Advanced Removal Methods](/1%20Python%20Basics/1.3%20Expressions%20and%20Variables.md#advanced-removal-methods) for a comparison of different removal methods.
 
+___
+#### Remove
+The `remove()` method can be used to remove an element from a set, however it The `remove()` method will only remove a single element at a time, and a `KeyError` will be raised if the item isn’t in the set. 
  ```py
 set_1 = {1, 2, "apple", 3.5}
 set_1.remove("apple")
 print(set_1)
+set_1.remove("banana")
+```
+
+Will output:
+```
+{1, 2, 3.5}
+KeyError: 'banana'
+```
+
+___
+ #### Discard
+The `discard()` method is unique to sets. It does much the same as `remove()` except that if the item to be removed does not exist in the set, `discard()` will handle it silently (it is *idempotent* - has no additional effect if repeated).
+ ```py
+set_1 = {1, 2, "apple", 3.5}
+set_1.discard("apple")
+print(set_1)
+set_1.discard("banana")
 ```
 
 Will output:
@@ -109,9 +132,8 @@ Will output:
 {1, 2, 3.5}
 ```
 
-The `remove()` method will only remove a single element at a time, and a `KeyError` will be raised if the item isn’t in the set.  
-The `discard()` method does the same as `remove()` except that if the item to be removed does not exist in the set, `discard()` will handle it silently (it is *idempotent* - has no additional effect if repeated).
-
+___
+#### Difference update
 To remove multiple elements at once, either the `difference_update()` method, or subtraction operator `-` can be used. 
 
 ```py
