Seksyen 2 complete; Readme links updated.

--- a/2 Python Data Structures/2.1 Lists and Tuples.md
+++ b/2 Python Data Structures/2.1 Lists and Tuples.md
@@ -520,7 +520,7 @@ ___
 Lists are very similar to tuples, the main difference between the two being that lists are mutable (can be modified), whereas tuples cannot be. They can be visually differentiated from tuples as lists are enclosed in square brackets `[]`, unlike tuples which are enclosed in parenthases `()`.
 ```py
 # Create a (nested) list
-list = [1, 2, ["pop", "rock"] ,[3,4],["disco",[1,2]]]
+my_list = [1, 2, ["pop", "rock"] ,[3,4],["disco",[1,2]]]
 print(List)
 ```
 
@@ -552,9 +552,9 @@ Many operations like [index](#indexing), [stride](#stride) and [slicing](#slicin
 Because lists are mutable they can be modified without the need to create a new list.
 ```py
 # Change the element based on the index
-list = ["disco", 10, 1.2]
+my_list = ["disco", 10, 1.2]
 print('Before change:', list)
-list[0] = 'hard rock'
+my_list[0] = 'hard rock'
 print('After change:', list)
 ```
 
@@ -568,9 +568,9 @@ ___
 The `sorted()` function returns a new list and does not modify the original iterable, which is necessary for immutable output such as tuples. However as lists are mutable see [above](#mutability), an in-place sort can be performed using the `sort()` method *(note that the usual [type](/1%20Python%20Basics/1.2%20Types.md#types) rules apply)*:
 
 ```py
-list = [7, 2, 15]
-list.sort()
-print(list)
+my_list = [7, 2, 15]
+my_list.sort()
+print(my_list)
 ```
 
 Will output:  
@@ -582,13 +582,13 @@ ___
 ### Append
 The `append()` method adds a single element to the end of a list. The effect of this is that the entire element (which can be a list, string, number, etc.) is added as a single item.
 ```py
-list = [1, 2, 3]
-list.append(4)  # Appends a single element (4) to the list
-print(list)
+my_list = [1, 2, 3]
+my_list.append(4)  # Appends a single element (4) to the list
+print(my_list)
 
 # Appending another list
-list.append([5, 6])  # The list [5, 6] is added as a single element
-print(list)
+my_list.append([5, 6])  # The list [5, 6] is added as a single element
+print(my_list)
 ```
 
 Will output:  
@@ -618,16 +618,18 @@ Will output:
 [1, 2, 3, 4, 5, 6]
 [1, 2, 3, 4, 5, 6, 'a', 'b', 'c']
 ```
-
+___
 ### Removal Methods
+There are a number of ways to remove elements from lists, see [Advanced Removal Methods](/1%20Python%20Basics/1.3%20Expressions%20and%20Variables.md#advanced-removal-methods) for a comparison of different removal methods.
 
+___
 #### Delete
-List elements can be deleted using `del()`. This is an example of a [statement](#functions-and-methods). `del` will remove any elements in the list indicated by its index reference.
+List elements can be deleted using `del`. This is an example of a [statement](#functions-and-methods). `del` will remove any elements in the list indicated by its index reference.
 ```py
-list = [1, 2, 3, 4, 5, 6]
-print('Before change:', list)
-del(list[3]) # Delete the 4th elemnt of th list (index 3)
-print('After change:', list)
+my_list = [1, 2, 3, 4, 5, 6]
+print('Before change:', my_list)
+del(my_list[3]) # Delete the 4th elemnt of th list (index 3)
+print('After change:', my_list)
 ```
 
 Will output:  
@@ -644,24 +646,57 @@ The `remove()` method is used specifically on lists, it removes the first occurr
 Being a method, `remove()` operates on the values in place.  
 It should be noted that `remove()` will only remove a single value at a time and will throw a `ValueError` if a value isn't present. This can be useful for deugging.
 ```py
-list = [1, 2, 3, 4, 5, 2, 6]
-print('Before change:', list)
-list.remove(2) # Remove the first instance of the number 2
-print('After change:', list)
-list.remove(7) # Remove the number 7 (which is not in the list)
+my_list = [1, 2, 3, 4, 5, 2, 6]
+print('Before change:', my_list)
+my_list.remove(2) # Remove the first instance of the number 2
+print('After change:', my_list)
+my_list.remove(7) # Remove the number 7 (which is not in the list)
 ```
 
 Will output:  
 ```
 Before change: [1, 2, 3, 4, 5, 2, 6]
 After change: [1, 3, 4, 5, 2, 6]
-ValueError: list.remove(x): x not in list
+ValueError: my_list.remove(x): x not in list
 ```
 
 #### Pop
+The `pop()` method is similar to `del()` in that it will remove a single element referred to by index from a list, however it will also return the removed element.  
+If no index is specified `pop()` will remove the last element by default. An `IndexError` will be trown if the specified index does not exist.
+```py
+my_list = [1, 2, 3, 4, 5, 2, 6]
+print('Before change:', my_list)
+my_list.pop() # Remove the last element of the list
+print('After change 1:', my_list)
+my_list.pop(2) # Remove the third element of the list
+print('After change 2:', my_list)
+my_list.pop(7) # Remove the number 7 (which is not in the list)
+```
+
+Will output:  
+```
+Before change: [1, 2, 3, 4, 5, 2, 6]
+6
+After change 1: [1, 2, 3, 4, 5, 2]
+3
+After change 2: [1, 2, 4, 5, 2]
+IndexError: pop index out of range
+```
 
 #### Clear
+The `clear()` method will remove all elements of a list, it will empty the container but leave the variable intact.
+```py 
+my_list = [1, 2, 3, 4, 5, 2, 6]
+my_list.clear() # Empty the list
+print(my_list)
+```
 
+Will output:  
+```
+[]
+```
+
+___
 ### Aliasing and Cloning
 #### Aliasing
 When creating an alias, a new variable name is created that points to the same list in memory. This can be useful when workingi with the same data under different variable names, for example in collaborative code where renaming improves readability.  
