--- a/2 Python Data Structures/2.3 Dictionaries.md
+++ b/2 Python Data Structures/2.3 Dictionaries.md
@@ -12,7 +12,10 @@ ___
     - [Append](#append)
     - [Extend](#extend)
     - [Update](#update)
+  - [Removal Methods](#removal-methods)
     - [Delete](#delete)
+    - [Pop](#pop)
+    - [Clear](#clear)
 - [Dictionary Exercises](#dictionary-exercises)
 
 ___
@@ -301,9 +304,13 @@ Will output:
 ```
 {'math': 90, 'science': 85, 'english': 88, 'history': 75, 'art': 80}
 ```
+___
+### Removal Methods
+There are a number of ways to remove elements from dicionaries, see [Advanced Removal Methods](/1%20Python%20Basics/1.3%20Expressions%20and%20Variables.md#advanced-removal-methods) for a comparison of different removal methods.
 
+___
 #### Delete
-Dictionary entries, both single value entries and whole key/value pairs can be removed using the `del` statement. `del()` removes the reference to the object, it will not remove any other references to the same object.
+Dictionary entries, both single value entries and whole key/value pairs can be removed using the `del` statement. `del` removes the reference to the object, it will not remove any other references to the same object.
 ```py
 student_info = {
     "name": "Alice",
@@ -324,6 +331,79 @@ Will output:
 {'name': 'Alice', 'age': 30, 'hobbies': ['reading', 'gardening'], 'scores': {'math': 90, 'science': 85, 'english': 88}}
 ```
 
+___
+#### Pop
+The `pop()` method is similar to `del()` in that it will remove a single element from a dictionary, however it will also return the removed element.  
+It can be used to remove an entire key along with it's values, or it can remove specific values fi they are referenced.
+Unlike with lists if no index is specified `pop()` will return an error. A `KeyError` will be thrown if the specified index does not exist.
+```py
+student_info = {
+    "name": "Alice",
+    "age": 30,
+    "hobbies": ["reading", "cycling", "gardening"],
+    "is_student": False,
+    "scores": {"math": 90, "science": 85, "english": 88},
+}
+
+print('Before change:', student_info)
+student_info.pop("scores") # Remove the key "scores" and all it's values
+print('After change:', student_info)
+student_info["hobbies"].pop(1) # Remove the value "cycling" (index 1) from the "hobbies" list.
+print('After change:', student_info)
+```
+
+Will output:  
+```
+Before change: {'name': 'Alice', 'age': 30, 'hobbies': ['reading', 'cycling', 'gardening'], 'is_student': False, 'scores': {'math': 90, 'science': 85, 'english': 88}}
+After change: {'name': 'Alice', 'age': 30, 'hobbies': ['reading', 'cycling', 'gardening'], 'is_student': False}
+'cycling'
+After change: {'name': 'Alice', 'age': 30, 'hobbies': ['reading', 'gardening'], 'is_student': False}
+```
+
+___
+#### Clear
+The `clear()` method removes all elements from a dictionary, leaving it empty, but the variable itself remains intact.
+```py 
+student_info = {
+    "name": "Alice",
+    "age": 30,
+    "hobbies": ["reading", "cycling", "gardening"],
+    "is_student": False,
+    "scores": {"math": 90, "science": 85, "english": 88},
+}
+
+student_info.clear() # Empty the list
+print(student_info)
+```
+
+Will output:  
+```
+{}
+```
+
+**None:**  
+`clear()` can also be used with nested lists, sets or dictionaries, for example `student_info["scores"].clear()` will empty `"scores"` without removing the key.  
+However to clear non-container elements, the element should be set to `None`. The variable could also be set to `= 0` or `""` (empty variable), but it is good practice to use `None`; this indicates that the variable is not blank, just empty for now.
+
+```py 
+student_info = {
+    "name": "Alice",
+    "age": 30,
+    "hobbies": ["reading", "cycling", "gardening"],
+    "is_student": False,
+    "scores": {"math": 90, "science": 85, "english": 88},
+}
+
+student_info["age"] = None # Remove the age variable, but keep the key.
+print(student_info)
+```
+
+Will output:  
+```
+{'name': 'Alice', 'age': None, 'hobbies': ['reading', 'cycling', 'gardening'], 'is_student': False, 'scores': {'math': 90, 'science': 85, 'english': 88}}
+```
+
+While containers can also be set to `None` this also removes the container type (list, set or dictionary), which may not be desirable.
 
 ___
 ## Dictionary Exercises
