--- a/1 Python Basics/1.3 Expressions and Variables.md
+++ b/1 Python Basics/1.3 Expressions and Variables.md
@@ -1,24 +1,20 @@
 *[Back to index](</readme.md>)*
 ___
 ## Contents
-
 - [Contents](#contents)
 - [Variables](#variables)
   - [Variables from user input](#variables-from-user-input)
 - [Expressions](#expressions)
   - [Modulo](#modulo)
-- [Advanced Removal Methods](#advanced-removal-methods)
-  - [Key:](#key)
+- [Advanced Removal Methods in Python Collections](#advanced-removal-methods-in-python-collections)
   - [del Statement](#del-statement)
   - [remove() Method](#remove-method)
   - [pop() Method](#pop-method)
   - [clear() Method](#clear-method)
   - [discard() Method](#discard-method)
   - [difference\_update() Method](#difference_update-method)
-- [String Exercises](#string-exercises)
+  - [Tuple Slicing](#tuple-slicing)
 - [Expressions and Variables Exercises:](#expressions-and-variables-exercises)
-
-
 
 ___
 ## Variables
@@ -170,27 +166,27 @@ if number % 2 != 0: # Will return True if the number is odd
 *See [Loops *Needs update 3.2](/x3%20Python%20Programming%20Fundamentals/x3.2%20Loops.md) for loop information.*  
 
 ___
-## Advanced Removal Methods
+## Advanced Removal Methods in Python Collections
 Python offers several ways to remove elements or references to data, depending on the context. These include:
 
-| **Method**           | **Use Case**                                 | **Target**    | **Key Difference**                                                       |
-|----------------------|----------------------------------------------|---------------|--------------------------------------------------------------------------|
-| `del`                | Delete references or by key/index            | [L](), [T](), [D]() | Does not return the deleted value. Can delete entire variables, tuples, or dictionary entries.                |
-| `remove()`           | Remove specific value                        | [L](), [S]()       | Operates on values, not indices. Throws an error if the value is absent. |
-| `pop()`              | Remove and return value                      | L, S, D    | For lists/sets, removes and returns the value. For dictionaries, removes and returns the value for a given key. |
-| `clear()`            | Empty the container                          | L, S, D    | Keeps the container, empties its contents. Tuples cannot be emptied, as they are immutable.                         |
-| `discard()`          | Remove value (no error)                      | S          | Non-error-throwing when the value is absent.                             |
-| `difference_update()`| Remove elements found in another iterable    | S          | Modifies the set in place without returning a value.                     |
-| `tuple slicing`      | Create a new tuple without specific elements | T          | Tuples are immutable; slicing creates a new tuple.                       |
+| **Method**           | **Use Case**                                 | **Target** | **Key Difference**                                                              |
+|----------------------|----------------------------------------------|------------|---------------------------------------------------------------------------------|
+| `del`                | Delete references or by key/index            | L, T, D    | Deletes references, including entire variables, tuples, or dictionary entries without returning the deleted value. |
+| `remove()`           | Remove specific value                        | L, S       | Removes the first occurrence of a specific value, throws an error if absent.    |
+| `pop()`              | Remove and return value                      | L, S, D    | Removes and returns the value. For dictionaries, removes by key, returning the value.                               |
+| `clear()`            | Empty the container                          | L, S, D    | Empties the container but keeps the container intact (can’t be used on tuples). |
+| `discard()`          | Remove value (no error if absent)            | S          | Does not raise an error if the value is absent.                                 |
+| `difference_update()`| Remove elements found in another iterable    | S          | Removes all elements found in another iterable, modifies the set in place.      |
+| `tuple slicing`      | Create a new tuple without specific elements | T          | Used to 'remove' elements by creating a new tuple. Tuples are immutable, so slicing produces a modified version. |
 
-### Key:
+**KEY:**
 - **L**: Lists
 - **T**: Tuples
 - **S**: Sets
 - **D**: Dictionaries
 
 ### del Statement
-The `del` statement can be used with [lists](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#delete), [dictionaries](/2%20Python%20Data%20Structures/2.3%20Dictionaries.md#delete) and entire variables. While it cannot delete elements from a [tuple](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#tuples) because tuples are immutabe, it can be used to remove an entire tuple. Delete (unlinke remove) does not return the deleted value.   
+The `del` statement can be used with [lists](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#delete), [dictionaries](/2%20Python%20Data%20Structures/2.3%20Dictionaries.md#delete) and entire variables. While it cannot delete elements from a [tuple](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#concatenation-and-immutability) because tuples are immutabe, it can be used to remove an entire tuple. Delete (unlinke remove) does not return the deleted value.   
 The `del` statement deletes a reference to an object, or the reference to the element specified by key/index. if no references remain the object/element is garbage collected.  
 
 ___
@@ -200,74 +196,22 @@ The `remove()` method will also work on [sets](/2%20Python%20Data%20Structures/2
 
 ___
 ### pop() Method
-The `pop()` method is similar to `del()` in that it will remove an element referred to by index/key from a [list](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#pop) or [dictionary](/2%20Python%20Data%20Structures/2.3%20Dictionaries.md#pop), however it will also return the removed element.
-What It Does: Removes and returns an element.  
-Example:
-```py 
-# Lists
-my_list = [1, 2, 3]
-value = my_list.pop(1)  # Removes element at index 1. Result: [1, 3], value = 2
+The `pop()` method is similar to `del()` in that it will remove an element referred to by index/key from a [list](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#pop) or [dictionary](/2%20Python%20Data%20Structures/2.3%20Dictionaries.md#pop), however it will also return the removed element. `pop()` will also remove elements from [sets](/2%20Python%20Data%20Structures/2.2%20Sets.md#pop); because sets are unordered and do not hae indexes or keys the removed element will be seemingly random, but the element is still returned.
 
-# Dictionaries
-my_dict = {"a": 1, "b": 2}
-value = my_dict.pop("b")  # Removes key 'b'. Result: {"a": 1}, value = 2
-```
-
-What It Does: Removes and returns an arbitrary element from a set.
-Where It's Used: Only for sets.
-Difference from del: Removes an arbitrary element rather than a specified value.
-Example:
-```py
-my_set = {1, 2, 3}
-value = my_set.pop()  # Removes and returns any element (e.g., `1`). Result: {2, 3}
-```
-
+___
 ### clear() Method
-What It Does: Removes all elements, leaving the container empty.
-Where It's Used: Lists, dictionaries, sets, etc.
-Difference from del: clear() empties the container but keeps the variable intact.
-Example:
-```py 
-# Lists
-my_list = [1, 2, 3]
-my_list.clear()  # Result: []
-
-# Dictionaries
-my_dict = {"a": 1, "b": 2}
-my_dict.clear()  # Result: {}
-```
+The `clear()` method will remove all elements of a [list](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#clear), [set](/2%20Python%20Data%20Structures/2.2%20Sets.md#clear) or [dictionary](/2%20Python%20Data%20Structures/2.3%20Dictionaries.md#clear), leaving the container empty without removing it. Unlike `del()` it will empty the container but leave the variable intact. `clear()` will not work with tuples as they are immutable.
 
 ### discard() Method
+The `discard()` method is unique to [sets](/2%20Python%20Data%20Structures/2.2%20Sets.md#discard). It does much the same as `remove()` except that if the item to be removed does not exist in the set, `discard()` will handle it silently.
 
-What It Does: Removes a value from a set. If the value doesn't exist, it does nothing (no error).
-Where It's Used: Only for sets.
-Difference from del: discard() is specific to sets and is non-error-throwing.
-Example:
-```py 
-my_set = {1, 2, 3}
-my_set.discard(2)  # Result: {1, 3}
-my_set.discard(4)  # No error, set remains unchanged.
-```
-
-### difference_update() Method
 ___
-## String Exercises
+### difference_update() Method
+The `difference_update()` method is unique to [sets](/2%20Python%20Data%20Structures/2.2%20Sets.md#difference-update). It will remove multiple elements at once. Alternatively the subtraction operator `-` can be used. Note that `difference_update()` modifies the set in place, whereas subtraction creates a new set. 
 
-**Exercise 1:**  
-What is the values of the variables `a`, `b` and `c` in the following code?
-```py
-a = "1"
-b = "2"
-c = a + b
-```
-<details><summary>Click here for the solution</summary>
-
-```
-"1"
-"2"
-"12"
-```
-</details><p></p>
+___
+### Tuple Slicing
+While [tuple slicing](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#slicing) is not strictly a removal method, it is a means of 'removing' values from tuples (which are [immutable](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#concatenation-and-immutability)) by taking the parts of a tuple that are to be kept and creating a new tuple (as well as allowing items to be 'added' to the new tuple.)
 
 ___
 ## Expressions and Variables Exercises:  
