--- a/2 Python Data Structures/2.2 Sets.md
+++ b/2 Python Data Structures/2.2 Sets.md
@@ -5,8 +5,10 @@ ___
 - [Sets](#sets)
 - [Set Operations](#set-operations)
   - [Add and Update](#add-and-update)
-  - [Element Removal](#element-removal)
+  - [Removal Methods](#removal-methods)
     - [Remove](#remove)
+    - [Pop](#pop)
+    - [Clear](#clear)
     - [Discard](#discard)
     - [Difference update](#difference-update)
   - [In](#in)
@@ -98,12 +100,12 @@ Will output:
   ```
 
 ___
-### Element Removal
-There are a number of ways to remove elements from sets see [Advanced Removal Methods](/1%20Python%20Basics/1.3%20Expressions%20and%20Variables.md#advanced-removal-methods) for a comparison of different removal methods.
+### Removal Methods
+There are a number of ways to remove elements from sets, see [Advanced Removal Methods](/1%20Python%20Basics/1.3%20Expressions%20and%20Variables.md#advanced-removal-methods) for a comparison of different removal methods.
 
 ___
 #### Remove
-The `remove()` method can be used to remove an element from a set, however it The `remove()` method will only remove a single element at a time, and a `KeyError` will be raised if the item isn’t in the set. 
+The `remove()` method can be used to remove an element from a set, however the `remove()` method will only remove a single element at a time, and a `KeyError` will be raised if the item isn’t in the set. 
  ```py
 set_1 = {1, 2, "apple", 3.5}
 set_1.remove("apple")
@@ -118,7 +120,45 @@ KeyError: 'banana'
 ```
 
 ___
- #### Discard
+#### Pop
+The `pop()` method will remove and return an arbitrary element from a set. Unlike `remove()` it will not remove a specified element, but it will return the element that has been removed.  
+This can be useful for dequeuing from unordered collections or to reduce memory footprint gradually.  
+**Note:** for complex sets, the order of removal by `pop()` can be random, order is not gurenteed.
+```py
+set_1 = {1, 2, "apple", 3.5}
+set_1.pop()   ### Repeat these steps |
+print(set_1)  ###                    v
+```
+
+Will output:
+```
+1
+{2, 3.5, 'apple'}
+2
+{3.5, 'apple'}
+3.5
+{'apple'}
+'apple'
+set()                               # Set is now empty
+KeyError: 'pop from an empty set'   # KeyError appears because the set is empty
+```
+
+___
+#### Clear
+The `clear()` method will remove all elements of a set, it will empty the container but leave the variable intact.
+```py 
+set_1 = {1, 2, "apple", 3.5}
+set_1.clear() # Empty the set
+print(set_1)
+```
+
+Will output:  
+```
+set()
+```
+
+___
+#### Discard
 The `discard()` method is unique to sets. It does much the same as `remove()` except that if the item to be removed does not exist in the set, `discard()` will handle it silently (it is *idempotent* - has no additional effect if repeated).
  ```py
 set_1 = {1, 2, "apple", 3.5}
